# rust_builder

./: build  notes.md
hello_world_lambda/: Cargo.toml
infrastructure/: .terraform.lock.hcl  lambda.tf  s3.tf  variables.tf
notes/: 001.md  presentation.md
resources/image_lambda/: Cargo.toml
resources/image_lambda/src/: errors.rs  main.rs  utils.rs
resources/image_lambda_rebuild/: Cargo.toml
resources/image_lambda_rebuild/src/: main.rs
