[package]
name = "image_lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = true

[dependencies]
accept-header = "0.2.3"
aws-config = "0.55.1"
aws-sdk-s3 = "0.26.0"
axum = "0.6.16"
image = "0.24.6"
lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.0"
mime = "0.3.17"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

